--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="sr-only">Room AI</div>
             </h1>
             <div class="hidden mx-auto flex gap-3">
-                <a class="text-gray-400 transition-colors duration-200 hover:text-white py-0 px-2 rounded whitespace-nowrap" href="/pricing">Pricing</a>
+                <a class="text-gray-400 transition-colors duration-200 hover:text-white py-0 px-2 rounded whitespace-nowrap" href="pricing.html">Pricing</a>
             </div>
             <div class="flex items-center gap-2 ml-auto">
-                <a class="ml-auto font-medium text-white transition-colors duration-200 py-1 px-3 rounded border border-gray-700 hover:border-gray-500 hover:bg-gray-800 hover:text-white" href="/start">Log in</a>
-                <a class="font-medium text-white transition-colors duration-200 py-1 px-3 rounded bg-teal-600 block hover:bg-teal-500 border border-teal-400 hover:border-teal-300" href="/start">
+                <a class="ml-auto font-medium text-white transition-colors duration-200 py-1 px-3 rounded border border-gray-700 hover:border-gray-500 hover:bg-gray-800 hover:text-white" href="start.html">Log in</a>
+                <a class="font-medium text-white transition-colors duration-200 py-1 px-3 rounded bg-teal-600 block hover:bg-teal-500 border border-teal-400 hover:border-teal-300" href="start.html">
                     <div class="hidden sm:block">Design your interior</div>
                     <div class="block sm:hidden">Start designing</div>
                 </a>
@@ -114,8 +114,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </h2>
                 <h3 class="mt-4 text-2xl sm:text-3xl leading-snug text-gray-200 break-keep max-w-2xl">Turn your ideas into professional interior designs with our easy-to-use <span style="background-size: 200%" class="font-bold bg-clip-text animate-gradient px-2 -mx-2 text-transparent bg-gradient-to-r from-orange-500 via-red-400 to-yellow-500">AI</span>&nbsp;software</h3>
                 <div class="flex gap-4 mt-4 text-lg">
-                    <a class="transition-colors duration-200 block font-medium bg-teal-600 hover:bg-teal-500 border border-teal-500 hover:border-teal-300 rounded px-5 py-2" href="/try">Try free demo</a>
-                    <a class="transition-colors duration-200 block bg-gray-800 hover:bg-gray-700 rounded text-gray-400 hover:text-gray-300 border border-gray-700 hover:border-gray-500 px-4 py-2" href="/pricing">See prices</a>
+                    <a class="transition-colors duration-200 block font-medium bg-teal-600 hover:bg-teal-500 border border-teal-500 hover:border-teal-300 rounded px-5 py-2" href="try.html">Try free demo</a>
+                    <a class="transition-colors duration-200 block bg-gray-800 hover:bg-gray-700 rounded text-gray-400 hover:text-gray-300 border border-gray-700 hover:border-gray-500 px-4 py-2" href="pricing.html">See prices</a>
                 </div>
                 <div class="text-base mt-4 text-gray-400">398 other people already tried it today!</div>
             </section>
@@ -806,7 +806,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <span class="whitespace-nowrap text-gray-700">For free.</span>
                         </h2>
                         <div class="mt-auto">
-                            <a class="transition-colors duration-200 inline-block text-xl bg-teal-600 hover:bg-teal-500 border border-teal-500 hover:border-teal-400 text-white font-medium py-2 px-4 rounded" href="/start">Get started for free</a>
+                            <a class="transition-colors duration-200 inline-block text-xl bg-teal-600 hover:bg-teal-500 border border-teal-500 hover:border-teal-400 text-white font-medium py-2 px-4 rounded" href="start.html">Get started for free</a>
                         </div>
                     </div>
                 </div>
@@ -941,15 +941,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="block">
                 <h3 class="text-lg font-semibold text-gray-100">Legal</h3>
                 <div class="flex flex-col gap-1 mt-2">
-                    <a class="text-gray-400 hover:text-white hover:underline" href="/terms-of-service">Terms of Service</a>
-                    <a class="text-gray-400 hover:text-white hover:underline" href="/privacy-policy">Privacy Policy</a>
+                    <a class="text-gray-400 hover:text-white hover:underline" href="terms-of-service.html">Terms of Service</a>
+                    <a class="text-gray-400 hover:text-white hover:underline" href="privacy-policy.html">Privacy Policy</a>
                 </div>
             </div>
             <div class="block">
                 <h3 class="text-lg font-semibold text-gray-100">Links</h3>
                 <div class="flex flex-col gap-1 mt-2">
-                    <a class="text-gray-400 hover:text-white hover:underline" href="/pricing">Pricing</a>
-                    <a class="text-gray-400 hover:text-white hover:underline" href="/start">Log in</a>
+                    <a class="text-gray-400 hover:text-white hover:underline" href="pricing.html">Pricing</a>
+                    <a class="text-gray-400 hover:text-white hover:underline" href="start.html">Log in</a>
                     <a class="text-gray-400 hover:text-white hover:underline" href="/billing">Billing &amp; Invoices</a>
                 </div>
             </div>
